# sadl

./: .clang-format  .flake8  .gitignore  .gitlab-ci.yml  README.md
converter/: main.py
doc/: main.tex
sadl/: dimensions.h  interpolation_utils.h  layer.h  layer_add.h  layer_averagepool.h  layer_batchnorm.h  layer_biasadd.h  layer_compare.h  layer_concat.h  layer_const.h  layer_conv2d.h  layer_conv2d_1x1.h  layer_conv2d_2x2.h  layer_conv2d_3x3.h  layer_conv2d_5x5.h  layer_conv2d_ixj.h  layer_conv2dtranspose.h  layer_copy.h  layer_expand.h  layer_flatten.h  layer_gridsample.h  layer_identity.h  layer_leakyrelu.h  layer_matmul.h  layer_maximum.h  layer_maxpool.h  layer_minimum.h  layer_mul.h  layer_pad.h  layer_placeholder.h  layer_prelu.h  layer_reduce_mean.h  layer_relu.h  layer_reshape.h  layer_resize.h  layer_scatternd.h  layer_shape.h  layer_sigmoid.h  layer_slice.h  layer_softmax.h  (+8 more)
sample/: CMakeLists.txt  copy.h  count_mac.cpp  debug_model.cpp  dumper.h  helper.h  naive_quantization.cpp  pytorch.py  pytorch_matmult.py  quantization_test.cpp  sample.cpp  sample_test.sh  sparsify_with_packing.cpp  tf2.py  update_model_version.cpp
utests/: CMakeLists.txt  check.sh  onnx_inference.py  test.cpp  test_border.cpp  utest.sh
utests/models/: EE1-1.10_model0.onnx  attention_block_dyn.onnx  attention_block_fixed.onnx  avgpool.onnx  batchnorm.onnx  clip.onnx  compare_greater.onnx  compare_less.onnx  conv2d_16_2x2x8_k2x2s2,2_g1_p0,0.onnx  conv2d_16_4x4x16_k1x3s1,1_g16_p0,0.onnx  conv2d_16_4x4x16_k1x3s1,1_g16_p0,0.py  conv2d_16_4x4x16_k3x1s1,1_g16_p0,0.onnx  conv2d_16_4x4x16_k3x1s1,1_g16_p0,0.py  conv2d_16_4x4x16_k3x3s1,1_g16_p0,0.onnx  conv2d_16_4x4x16_k3x3s1,1_g16_p0,0.py  conv2d_16_4x4x1_k1x3s1,1_g1_p0,0.onnx  conv2d_16_4x4x1_k1x3s1,1_g1_p0,0.py  conv2d_16_4x4x1_k3x1s1,1_g1_p0,0.onnx  conv2d_16_4x4x1_k3x1s1,1_g1_p0,0.py  conv2d_16_4x4x1_k3x3s1,1_g1_p0,0.onnx  conv2d_16_4x4x1_k3x3s1,1_g1_p0,0.py  conv2d_1_4x4x16_k3x3s1,1_g1_p0,0.onnx  conv2d_1x3s1_2x2x1.onnx  conv2d_1x3s1g4_2x2x4.onnx  conv2d_24_2x2x16_k2x2s2,2_g1_p0,0.onnx  conv2d_32_2x2x16_k2x2s2,2_g1_p0,0.onnx  conv2d_3_2x2x12_k2x2s2,2_g1_p0,0.onnx  conv2d_3x1s1_2x2x1.onnx  conv2d_3x3s1_10x10x3.onnx  conv2d_4_8x8x4_k1x1s1,1_g1_p0,0.onnx  conv2d_4_8x8x4_k1x1s1,1_g4_p0,0.onnx  conv2d_4_8x8x4_k1x1s2,1_g1_p0,0.onnx  conv2d_4_8x8x4_k1x3s1,2_g1_p0,1.onnx  conv2d_4_8x8x4_k3x1s1,1_g1_p1,0.onnx  conv2d_4_8x8x4_k3x1s1,1_g4_p1,0.onnx  conv2d_4_8x8x4_k3x3s1,1_g1_p1,1.onnx  conv2d_4_8x8x4_k3x3s2,1_g1_p1,1.onnx  conv2d_4_8x8x4_k3x3s2,2_g1_p1,1.onnx  conv2d_4_8x8x4_k5x5s1,1_g1_p2,2.onnx  conv2d_4_8x8x4_k5x5s1,1_g4_p2,2.onnx  (+92 more)
